Updated Seed File

--- a/app/assets/stylesheets/leagues.scss
+++ b/app/assets/stylesheets/leagues.scss
@@ -88,3 +88,8 @@
   margin-top: 1px;
   font-weight: bolder;
 }
+
+.createLink {
+  background-color: black;
+  background-blend-mode: saturation;
+}
