--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -8,7 +8,7 @@
         <% end %>
       </div>
     </div>
-    <div class="row">
+    <div class="row createLink">
       <%= link_to "Create a custom league", new_league_path %>
     </div>
   </div>
