--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
     <thead class="row leagueBoard">
     <th class="small-6 medium-6 large-6 columns rank">League Name</th>
     <th class="small-3 medium-3 large-3 columns">Season Score</th>
-    <th class="small-3 medium-3 large-3 columns weeklyScore">Weekly Score</th>
+    <th class="small-3 medium-3 large-3 columns weeklyScore">Score for week <%=@week.week_number  %> </th>
   </thead>
     <tbody class="leagueBoard">
     <% @scores.each do |score|%>
