--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -47,7 +47,7 @@
           <% home = "Niners" %>
           <% end %>
             <div class="small-6 small-offset-3 medium-3 medium-offset-2 large-3 large-offset-0 columns game end">
-              <span> <%=game.gametime.strftime('%a, %B %e at %l%M%p')%> </span>
+              <span> <%=game.gametime.strftime('%a, %B %e at %l%M%p%Z')%> </span>
               <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
               <% if pick.length > 0 %>
                 <div class="gameWinner">
