--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -3,9 +3,11 @@
 </h1>
 <ul class="pickList">
 <% @picks.each do |pick| %>
+<% if Game.find(pick[:game_id]).gametime < Time.now %>
   <li userPick>
   <%= pick[:confidence] %>
   <%= Team.find(pick[:winning_team]).location %> <%= Team.find(pick[:winning_team]).team_name %>
   </li>
+  <% end %>
   <% end %>
 </ul>
