Improved list for viewing picks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,6 +130,21 @@ h3 {
     background-color: #486D30;
     opacity: .70;
     overflow: hidden;
+    font-weight: bolder;
+}
+
+.pickedGame {
+    align-content: center;
+    margin: 2px;
+    border-style: solid;
+    height: 4em;
+    width:  5em;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: #486D30;
+    opacity: .70;
+    overflow: hidden;
+    font-weight: bolder;
 }
 
 .gameTeam {
