--- a/app/assets/stylesheets/memberships.scss
+++ b/app/assets/stylesheets/memberships.scss
@@ -1,7 +1,8 @@
 .pickList {
     display: block;
     margin: auto;
-    padding-left: 20em;
+    padding-left: 5em;
+    align-content: center;
     font-size: 30px;
     font-weight: bolder;
     list-style-type: none;
@@ -13,4 +14,12 @@
   text-align: center;
   color: black;
   font-weight: bolder;
+}
+
+.userPick {
+  display: block;
+  margin: auto;
+  border-style: dashed;
+  border-color: black;
+  height: 10em;
 }
