--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,74 +1,87 @@
 <div class="leagueShow">
   <h2 class="welcomeHeader">League Homepage for <%= @league.league_name %></h1>
 
-  <div class="leaderBoard">
-    <table role="grid" class="row">
-      <thead class="row leaderBoardHead">
-      <th class="small-1 medium-1 large-1 columns rank">Rank</th>
-      <th class="small-4 medium-4 large-4 columns user">Username</th>
-      <th class="small-3 medium-3 large-3 columns seasonScore">Season Score</th>
-      <th class="small-4 medium-4 large-4 columns weeklyScore">Weekly Score</th>
-    </thead>
-      <tbody>
-      <% @scores.each_with_index do |score, index|%>
-      <tr>
-        <td class="small-1 medium-1 large-1 columns rank"><%= index+1 %></td>
-        <td class="small-4 medium-4 large-4 columns user"><%=link_to "#{score[:username]}",membership_path(score[:member_id])%></td>
-        <td class="small-3 medium-3 large-3 columns seasonScore"><%=score[:score_season]%></td>
-        <td class="small-4 medium-4 large-4 columns weeklyScore"><%= score[:score_week] %></td>
-      </tr>
-      <%end%>
-    </tbody>
-    </table>
-  </div>
+    <div class="leaderBoard">
+      <table role="grid" class="row">
+        <thead class="row leaderBoardHead">
+          <th class="small-1 medium-1 large-1 columns rank">Rank</th>
+          <th class="small-4 medium-4 large-4 columns user">Username</th>
+          <th class="small-3 medium-3 large-3 columns seasonScore">Season Score</th>
+          <th class="small-4 medium-4 large-4 columns weeklyScore">Weekly Score</th>
+        </thead>
+        <tbody>
+          <% @scores.each_with_index do |score, index|%>
+          <tr>
+            <td class="small-1 medium-1 large-1 columns rank"><%= index+1 %></td>
+            <td class="small-4 medium-4 large-4 columns user"><%=link_to "#{score[:username]}",membership_path(score[:member_id])%></td>
+            <td class="small-3 medium-3 large-3 columns seasonScore"><%=score[:score_season]%></td>
+            <td class="small-4 medium-4 large-4 columns weeklyScore"><%= score[:score_week] %></td>
+          </tr>
+          <%end%>
+        </tbody>
+      </table>
+    </div>
 
-  <% if !@members.find_by_id(current_user.id) %>
-  <%= link_to "Join this league", league_memberships_path(@league), {method: :post,class:"joinPickLink"}  %>
-  <% else %>
-  <% if @games %>
-    <% if @picks.length ==0  %>
-    <%= link_to "Click here to pick the games!",league_picks_path(@league.id),{class:"joinPickLink"}  %>
+    <% if !@members.find_by_id(current_user.id) %>
+      <%= link_to "Join this league", league_memberships_path(@league), {method: :post,class:"joinPickLink"}  %>
     <% else %>
-      <h3 id="pickLink"><%= link_to "Edit your picks here",  league_picks_path(@league.id),{class:"joinPickLink"} %></h3>
-      <% end %>
-    <%end %>
-  <% end %>
-  <% if @games %>
+      <% if @games %>
+        <% if @picks.length ==0  %>
+          <%= link_to "Click here to pick the games!",league_picks_path(@league.id),{class:"joinPickLink"}  %>
+        <% else %>
+          <h3 id="pickLink"><%= link_to "Edit your picks here",  league_picks_path(@league.id),{class:"joinPickLink"} %></h3>
+        <% end %>
+      <%end %>
+    <% end %>
+    <% @members.each do |member| %>
+    <% if @games %>
       <h2 class="gameHead">Games for Week <%= @current_week.week_number %></h2>
+      <h2 class="gameHead">Games for <%= member.username %></h2>
       <div class="row">
-          <% @games.each do |game| %>
-          <% away =Team.find_by_id(game.away_team_id).team_name  %>
-          <% home =Team.find_by_id(game.home_team_id).team_name  %>
-          <% pick = Pick.where('user_id = ? AND game_id = ? AND league_id = ?', current_user.id, game.id, @league.id) %>
-          <% if away == "49ers" %>
-            <% away = "Niners" %>
-          <% end %>
-            <% if home == "49ers" %>
-          <% home = "Niners" %>
-          <% end %>
-            <div class="small-6 small-offset-3 medium-3 medium-offset-2 large-3 large-offset-0 columns game end">
-              <span> <%=game.gametime.in_time_zone("America/New_York").strftime('%a, %B %e at %l%M%p %Z')%> </span>
-              <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
-              <% if pick.length > 0 %>
-                <div class="gameWinner">
-                <div>Pick:
-                  <%= Team.find_by_id(pick[0].winning_team).team_name %>
-                </div>
-                <div>
-                  Confidence: <%= pick[0].confidence %>
-                </div>
-                </div>
-                <% else %>
-                <div></div>
-                <div></div>
-              <% end %>
+        <% @games.each do |game| %>
+        <% away =Team.find_by_id(game.away_team_id).team_name  %>
+        <% home =Team.find_by_id(game.home_team_id).team_name  %>
+
+        <% pick = Pick.where('user_id = ? AND game_id = ? AND league_id = ?', User.find_by(username:member.username), game.id, @league.id) %>
+        <% if away == "49ers" %>
+        <% away = "Niners" %>
+        <% end %>
+        <% if home == "49ers" %>
+        <% home = "Niners" %>
+        <% end %>
+        <div class="small-6 small-offset-3 medium-3 medium-offset-2 large-3 large-offset-0 columns game end">
+          <span> <%=game.gametime.in_time_zone("America/New_York").strftime('%a, %B %e at %l%M%p %Z')%> </span>
+          <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
+          <% if pick.length > 0 %>
+          <% if !game.winner_id %>
+          <div class="gameWinner">
+            <div>Pick:
+              <%= Team.find_by_id(pick[0].winning_team).team_name %>
             </div>
+            <div>
+              Confidence: <%= pick[0].confidence %>
+            </div>
+          </div>
+          <% else %>
+          <% if game.winner_id == pick[0].winning_team %>
+          <div class="gameWinner">
+            <div>Pick:
+              <%= Team.find_by_id(pick[0].winning_team).team_name %>
+            </div>
+            <div>
+              Confidence:+ <%= pick[0].confidence %>
+            </div>
+          </div>
+          <% else %>
+          <div>
+            Confidence:- <%= pick[0].confidence %>
+          </div>
+          <% end %>
+          <% end %>
+          <% end %>
+        </div>
           <% end %>
       </div>
-
-  <% else %>
-  <div>
-    <p> No Games Scheduled </p>
+      <% end %>
+      <% end %>
   </div>
-  <% end %>
-</div>
