--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -33,55 +33,62 @@
         <% end %>
       <%end %>
     <% end %>
-    <% @members.each do |member| %>
-    <% if @games %>
+
+    <% if @games && Time.now > @current_week.main_slate_start %>
+    <div class ="leaguePicks">
+      <table role="grid" class="row">
+        <thead class="row gamePickGrid">
+
+        </thead>
+        <tbody>
+          <% @games.each do |game| %>
+          <% away =Team.away(game)  %>
+          <% home =Team.home(game)  %>
+          <tr pickGridLine>
+            <td headers="game"><%=away.team_name%> @ <%= home.team_name %> </td>
+          <% picks = Game.game_picks(game, @league) %>
+              <% picks.each do |pick| %>
+              <% team_name = Team.find(pick.winning_team).team_name %>
+              <td headers="#{<%=pick.user.username %>}"><%="#{pick.user.first_name} | #{team_name} | #{pick.confidence}"%></span></td>
+              <% end %>
+          </tr>
+          <%end%>
+        </tbody>
+      </table>
+
+     </div>
+
+    <% else %>
       <h2 class="gameHead">Games for Week <%= @current_week.week_number %></h2>
       <h2 class="gameHead">Games for <%= member.username %></h2>
       <div class="row">
         <% @games.each do |game| %>
-        <% away =Team.find_by_id(game.away_team_id).team_name  %>
-        <% home =Team.find_by_id(game.home_team_id).team_name  %>
+        <% away =Team.away(game).team_name  %>
+        <% home =Team.home(game).team_name  %>
 
         <% pick = Pick.where('user_id = ? AND game_id = ? AND league_id = ?', User.find_by(username:member.username), game.id, @league.id) %>
-        <% if away == "49ers" %>
-        <% away = "Niners" %>
+        <% if away.team_name == "49ers" %>
+          <% away = "Niners" %>
         <% end %>
-        <% if home == "49ers" %>
-        <% home = "Niners" %>
+        <% if home.team_name == "49ers" %>
+          <% home = "Niners" %>
         <% end %>
         <div class="small-6 small-offset-3 medium-3 medium-offset-2 large-3 large-offset-0 columns game end">
           <span> <%=game.gametime.in_time_zone("America/New_York").strftime('%a, %B %e at %l%M%p %Z')%> </span>
-          <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
-          <% if pick.length > 0 %>
-          <% if !game.winner_id %>
-          <div class="gameWinner">
-            <div>Pick:
-              <%= Team.find_by_id(pick[0].winning_team).team_name %>
+          <div class="gameTeam" id=<%="#{away.team_name}"%>></div>AT<br><div class="gameTeam" id=<%="#{home.team_name}"%>></div>
+          <% if pick.length > 0 && !game.winner_id  %>
+            <div class="gameWinner">
+              <div>Pick:
+                <%= Team.find_by_id(pick[0].winning_team).team_name %>
+              </div>
+              <div>
+                Confidence: <%= pick[0].confidence %>
+              </div>
             </div>
-            <div>
-              Confidence: <%= pick[0].confidence %>
-            </div>
-          </div>
-          <% else %>
-          <% if game.winner_id == pick[0].winning_team %>
-          <div class="gameWinner">
-            <div>Pick:
-              <%= Team.find_by_id(pick[0].winning_team).team_name %>
-            </div>
-            <div>
-              Confidence:+ <%= pick[0].confidence %>
-            </div>
-          </div>
-          <% else %>
-          <div>
-            Confidence:- <%= pick[0].confidence %>
-          </div>
-          <% end %>
-          <% end %>
           <% end %>
         </div>
-          <% end %>
+        <% end %>
       </div>
       <% end %>
-      <% end %>
+
   </div>
