--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -4,8 +4,8 @@
 <ul class="pickList">
   <% @picks.each do |pick| %>
   <% team =Team.find_by_id(pick[:winning_team]) %>
-  <% if team == "49ers" %>
-  <% team = "Niners" %>
+  <% if team.team_name == "49ers" %>
+  <% team.team_name = "Niners" %>
   <% end %>
 
   <% if @user == @membership.user || Game.find(pick[:game_id]).gametime < Time.now %>
