styling for pick page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -180,3 +180,12 @@ h3 {
   color: black;
   font-weight: bold;
 }
+
+.winner {
+  border-color:green;
+  border-style:solid;
+  border-width: thick;
+}
+.loser {
+  border-color: red;
+}
