--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -1,17 +1,26 @@
 <h1 class="membershipHeader">
   <%= @membership.user.username%>'s picks for week <%= Week.current_week.week_number %>
 </h1>
-<ul class="pickList">
+<div class="pickList">
   <% @picks.each do |pick| %>
-  <% team =Team.find_by_id(pick[:winning_team]) %>
+  <% team = Team.find_by_id(pick[:winning_team]) %>
   <% if team.team_name == "49ers" %>
   <% team.team_name = "Niners" %>
   <% end %>
-
-  <% if @user == @membership.user || Game.find(pick[:game_id]).gametime < Time.now %>
-  <li class="pickedGame" id=<%="#{team.team_name}"%>>
-    <%= pick[:confidence] %>
-  </li>
+  <% game = Game.find(pick[:game_id]) %>
+<div>
+  <% if @user == @membership.user || game.gametime < Time.now %>
+    <% if game.winner && pick[:winning_team] == game.winner.id %>
+      <div class="pickedGame winner" id=<%="#{team.team_name}"%>>
+      <div><%= pick[:confidence] %></div>
+    <% elsif game.winner && pick[:winning_team] != game.winner.id%>
+    <div class="pickedGame loser" id=<%="#{team.team_name}"%>>
+      <div>-<%= pick[:confidence] %></div>
+    <% else %>
+    <div class="pickedGame" id=<%="#{team.team_name}"%>>
+        <div><%= pick[:confidence] %></div>
+    <% end %>
+  </div>
   <% end %>
   <% end %>
-</ul>
+</div>
