--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <div class="fieldBackgroundHome">
+<div id="app"></div>
 <% if current_user %>
 <h2 class="welcomeHeader">Welcome <%=current_user.first_name%></h2>
   <table role="grid" class="row leagueBoard">
