--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -15,10 +15,7 @@
     <span> <%=game.gametime.in_time_zone("America/New_York").strftime('%a, %B %e at %l%M%p %Z')%> </span>
     <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
     <span>
-    <%=  form_for(game, url: edit_league_game_path(@league.id, game.id),method: :patch) do |f|  %>
-      <%= f.label :winner_id %>
-      <%= f.select :winner_id, options_for_select([away,home], :id) %>
-    <% end %>
+      <%= link_to "Edit", edit_league_game_path(@league,game) %>
     </span>
   </div>
   <% end %>
