--- a/app/assets/stylesheets/leagues.scss
+++ b/app/assets/stylesheets/leagues.scss
@@ -103,3 +103,11 @@
   border-bottom: solid;
   border-color: inherit;
 }
+
+.pickWinner {
+  font-weight: bolder;
+}
+
+.pickLoser {
+  text-decoration: line-through;
+}
