--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -19,6 +19,13 @@
           </tr>
           <%end%>
         </tbody>
+        <tfoot>
+          <tr>
+            <td>
+          <%= render "partials/week_select" %>
+        </td>
+        </tr>
+        </tfoot>
       </table>
     </div>
 
@@ -33,8 +40,8 @@
         <% end %>
       <%end %>
     <% end %>
-    <% if @current_week.main_slate_start %>
-    <% if @games && Time.now > @current_week.main_slate_start %>
+    <% if @week.main_slate_start %>
+    <% if @games && Time.now > @week.main_slate_start %>
     <div class ="leaguePicks">
       <table role="grid" class="row">
         <thead class="row gamePickGrid">
@@ -68,11 +75,10 @@
           <%end%>
         </tbody>
       </table>
-
      </div>
 
     <% else %>
-      <h2 class="gameHead">Games for Week <%= @current_week.week_number %></h2>
+      <h2 class="gameHead">Games for Week <%= @week.week_number %></h2>
       <h2 class="gameHead">Games for <%= @member.username %></h2>
       <div class="row">
         <% @games.each do |game| %>
