--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -1,6 +1,1 @@
-<h1 class="membershipHeader">
-<%= render "partials/week_select" %>
-<%= @membership.user.username%>'s picks for week <%= Week.current_week.week_number %>
-</h1>
-<div> <%= link_to "Games", league_games_path(@membership.league) %> </div>
-<%= render "partials/picklist" %>
+<div id="app"/>
