--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,116 +1,1 @@
-<div class="leagueShow">
-  <h2 class="welcomeHeader">League Homepage for <%= @league.league_name %></h1>
-
-    <div class="leaderBoard">
-      <table role="grid" class="row">
-        <thead class="row leaderBoardHead">
-          <th class="small-1 medium-1 large-1 columns rank">Rank</th>
-          <th class="small-4 medium-4 large-4 columns user">Username</th>
-          <th class="small-3 medium-3 large-3 columns seasonScore">Season Score</th>
-          <th class="small-4 medium-4 large-4 columns weeklyScore">Weekly Score</th>
-        </thead>
-        <tbody>
-          <% @scores.each_with_index do |score, index|%>
-          <tr>
-            <td class="small-1 medium-1 large-1 columns rank"><%= index+1 %></td>
-            <td class="small-4 medium-4 large-4 columns user"><%=link_to "#{score[:username]}",membership_path(score[:member_id])%></td>
-            <td class="small-3 medium-3 large-3 columns seasonScore"><%=score[:score_season]%></td>
-            <td class="small-4 medium-4 large-4 columns weeklyScore"><%= score[:score_week] %></td>
-          </tr>
-          <%end%>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td>
-          <%= render "partials/week_select" %>
-        </td>
-        </tr>
-        </tfoot>
-      </table>
-    </div>
-
-    <% if !@members.include?(@member) %>
-      <%= link_to "Join this league", league_memberships_path(@league), {method: :post,class:"joinPickLink"}  %>
-    <% else %>
-      <% if @games %>
-        <% if @picks.length ==0  %>
-          <%= link_to "Click here to pick the games!",league_picks_path(@league),{class:"joinPickLink"}  %>
-        <% else %>
-          <h3 id="pickLink"><%= link_to "Edit your picks here",  league_picks_path(@league),{class:"joinPickLink"} %></h3>
-        <% end %>
-      <%end %>
-    <% end %>
-    <% if @week.main_slate_start %>
-    <% if @games && Time.now > @week.main_slate_start %>
-    <div class ="leaguePicks">
-      <table role="grid" class="row">
-        <thead class="row gamePickGrid">
-          <th class="boardPickColumn">Game</th>
-          <% @members.each do |member| %>
-            <th class="boardPickColumn"> <%= member.username%> </th>
-          <% end %>
-        </thead>
-        <tbody>
-          <% @games.each do |game| %>
-          <% away =Team.away(game)  %>
-          <% home =Team.home(game)  %>
-          <tr pickGridLine>
-              <td headers="game"><%=away.team_name%> @ <%= home.team_name %></td>
-          <% picks = Game.game_picks(game, @league, @members) %>
-              <% picks.each do |pick| %>
-              <% team = Team.find(pick.winning_team) %>
-              <td class="boardPickRow">
-                  <% if game.winner%>
-                  <% if pick.winning_team == game.winner_id %>
-                    <span class = "pickWinner"><%="#{team.team_name} | #{pick.confidence}"%></span>
-                  <% else %>
-                    <span class = "pickLoser"><%="#{team.team_name} | #{pick.confidence}"%></span>
-                  <% end %>
-                <% else %>
-                  <span ><%="#{team.team_name} | #{pick.confidence}"%></span>
-                <% end %>
-              </td>
-              <% end %>
-          </tr>
-          <%end%>
-        </tbody>
-      </table>
-     </div>
-
-    <% else %>
-      <h2 class="gameHead">Games for Week <%= @week.week_number %></h2>
-      <h2 class="gameHead">Games for <%= @member.username %></h2>
-      <div class="row">
-        <% @games.each do |game| %>
-        <% away =Team.away(game).team_name  %>
-        <% home =Team.home(game).team_name  %>
-
-        <% pick = Pick.where('user_id = ? AND game_id = ? AND league_id = ?', @member.id, game.id, @league.id) %>
-        <% if away == "49ers" %>
-          <% away = "Niners" %>
-        <% end %>
-        <% if home == "49ers" %>
-          <% home = "Niners" %>
-        <% end %>
-        <div class="small-6 small-offset-3 medium-3 medium-offset-2 large-3 large-offset-0 columns game end">
-          <span> <%=game.gametime.in_time_zone("America/New_York").strftime('%a, %B %e at %l%M%p %Z')%> </span>
-          <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
-          <% if pick.length > 0 && !game.winner_id  %>
-            <div class="gameWinner">
-              <div>Pick:
-                <%= Team.find_by_id(pick[0].winning_team).team_name %>
-              </div>
-              <div>
-                Confidence: <%= pick[0].confidence %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-        <% end %>
-      </div>
-      <% end %>
-      <% else %>
-      <div>No slate</div>
-      <% end %>
-
-  </div>
+<div id="app"></>
