--- a/app/views/partials/_picklist.html.erb
+++ b/app/views/partials/_picklist.html.erb
@@ -1,23 +1,46 @@
 <div class="pickList">
   <% @picks.each do |pick| %>
   <% team = Team.find_by_id(pick[:winning_team]) %>
-  <% if team.team_name == "49ers" %>
-  <% team.team_name = "Niners" %>
+    <% if team.team_name == "49ers" %>
+    <% team.team_name = "Niners" %>
   <% end %>
   <% game = Game.find(pick[:game_id]) %>
-<div>
-  <% if @user == @membership.user || game.gametime < Time.now %>
-    <% if game.winner && pick[:winning_team] == game.winner.id %>
-      <div class="pickedGame winner" id=<%="#{team.team_name}"%>>
-      <div><%= pick[:confidence] %></div>
-    <% elsif game.winner && pick[:winning_team] != game.winner.id%>
-    <div class="pickedGame loser" id=<%="#{team.team_name}"%>>
-      <div>-<%= pick[:confidence] %></div>
-    <% else %>
-    <div class="pickedGame" id=<%="#{team.team_name}"%>>
+  <div class="row">
+    <% if @user == @membership.user || game.gametime < Time.now %>
+      <% if game.winner && pick[:winning_team] == game.winner.id %>
+        <div class="pickedGame winner" id=<%="#{team.team_name}"%>>
         <div><%= pick[:confidence] %></div>
+        <% elsif game.winner && pick[:winning_team] != game.winner.id%>
+          <div class="pickedGame loser" id=<%="#{team.team_name}"%>> - <%= pick[:confidence] %></div>
+        <% else %>
+          <div class="pickedGame" id=<%="#{team.team_name}"%>><%= pick[:confidence] %></div>
+        <% end %>
+        </div>
+      <% end %>
     <% end %>
   </div>
-  <% end %>
-  <% end %>
 </div>
+
+
+<ul class=" row memberPicks">
+  <div class="columns small-4 small-offset-4">
+  <% @picks.each do |pick| %>
+    <% team = Team.find_by_id(pick[:winning_team]) %>
+      <% if team.team_name == "49ers" %>
+      <% team.team_name = "Niners" %>
+    <% end %>
+    <li><% if @user == @membership.user || game.gametime < Time.now %>
+      <% game = Game.find(pick[:game_id]) %>
+      <% if game.winner && pick[:winning_team] == game.winner.id %>
+        <span class="pickedGame winner" id=<%="#{team.team_name}"%>>
+        <span><%= pick[:confidence] %></span>
+        <% elsif game.winner && pick[:winning_team] != game.winner.id%>
+          <span class="pickedGame loser" id=<%="#{team.team_name}"%>> - <%= pick[:confidence] %></span>
+        <% else %>
+          <span class="pickedGame" id=<%="#{team.team_name}"%>><%= pick[:confidence] %></span>
+      <% end %>
+        </span>
+      <% end %>
+    </li>
+  <% end %>
+</ul>
