--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,10 +1,7 @@
-<h1>This is a games page</h1>
-
 <div class="row">
   <% @games.each do |game| %>
   <% away =Team.away(game).team_name  %>
   <% home =Team.home(game).team_name  %>
-
   <% if away == "49ers" %>
     <% away = "Niners" %>
   <% end %>
@@ -14,7 +11,9 @@
 
   <div class="small-6 small-offset-3 medium-3 medium-offset-2 large-3 large-offset-0 columns game end">
     <span> <%=game.gametime.in_time_zone("America/New_York").strftime('%a, %B %e at %l%M%p %Z')%></span>
-    <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
+    <div class="gameTeam" id=<%="#{away}"%>></div>AT
+      <br>
+    <div class="gameTeam" id=<%="#{home}"%>></div>
     <span>
       <%= link_to "Edit", edit_league_game_path(@league,game) %>
     </span>
