fixed game update bug

--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -148,7 +148,7 @@
   background-position: top;
   background-repeat: no-repeat;
 }
-#Redskins{
+#Football{
   background: image-url("Redskins.gif");
   background-size: 75%;
   background-position: top;
